--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_executable(main main.cpp)
+target_include_directories(main PRIVATE include)
 target_link_libraries(main PRIVATE
   netcdf
   netcdf_c++4
